header와 home, plans 페이지 scss 수정
- home 화면에 보이는 이미지 주소 추가
- home 화면에서 input란 자동완성 시 배경색상이 파란색이라 녹색 계열로
  통일하기 위하여 수정
- header의 목표 적는 란을 공부 버튼과 구분되도록 scss 수정
- 드롭다운 메뉴 hover 시 색상과 전체 색상은 톤이 맞는데 header 버튼의
  색상은 좀 더 채도가 높은 느낌이라 비슷한 톤으로 색상 변경
- plans 페이지의 아이콘들을 브라우저, 기기마다 통일하기 위하여 이미지
  파일로 수정

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -166,24 +166,29 @@ header {
 			span {
 				position: relative;
 				width: 50px;
-				height: 18px;
-				padding: 7.5px 13px 7.5px 12px;
+				padding: 5px 13px 5px 12px;
 				margin: 0 10px 0 0;
 				font-size: 14px;
-				background-color: $header-button;
+				border: 4px double $header-button;
 				text-align: center;
-				color: white;
+				font-weight: 600;
+				background-color: white;
+				color: $text;
 			}
 
 			button {
 				position: relative;
 				top: -1px;
 				width: 55px;
-				height: 34px;
+				height: 36px;
 				font-size: 14px;
 				background-color: $header-button;
 				color: white;
 				border-right: 0.5px solid white;
+
+				&:hover {
+					background-color: $header-button-hover;
+				}
 			}
 
 			/*
