--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -29,11 +29,11 @@ header
                             a(href=routes.home) 설정
         .header__button-wrapper <!--로그인/회원가입 페이지에서는 안보이게-->
             if !user
-                span.menu 목표를 적어 주세요.
-                button.study__button 공부 
+                span 목표를 적어 주세요.
+                button 공부 
             else
-                span.menu 목표를 적어 주세요.
-                button.study__button 공부 
+                span 목표를 적어 주세요.
+                button 공부 
 <!--할 일 내에서 일상, 공부 카테고리-->
         // 버튼 클릭하면 할 일이 보이고 버튼 내용은 일기로 변함, 또 누르면 반대로
         // 로그인 안했으면 일기는 전부 자물쇠 처리 되어서 안보임
