--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -15,11 +15,14 @@ block content
                     .todolist-box
                         ul.todolist
                             li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
+                                button.check__button(type="button")
+                                    img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/white-heavy-check-mark_2705.png", alt="완료")
                                 span 코딩 테스트 파이썬 5문제 풀기
                                 .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
+                                    button.modify__button(type="button")
+                                        img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/pencil_270f.png", alt="수정")
+                                    button.remove__button(type="button")
+                                        img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/cross-mark_274c.png", alt="삭제")
                             li 
                                 button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
                                 span 할 일 1
@@ -97,10 +100,11 @@ block content
                                 span 할 일 123
                     //- p.display-button ▲
                     form.add-form <!--지난 날짜는 보이지 않도록-->
-                        button.description__button(type="button") 🔥<!-- 버튼 클릭 시 input 창에 [오늘의 한마디] 추가됨. 입력 시 이 문구가 있으면 오늘의 한마디로 넘어감 -->
+                        button.description__button(type="button")
+                            img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
+                        //  버튼 클릭 시 input 창에 [오늘의 한마디] 추가됨. 입력 시 이 문구가 있으면 오늘의 한마디로 넘어감
                         input.add-form__input(type="text" placeholder="할 일")
                         button.add-form__button 추가
-                
                 li.day__item
                     .title 
                         .title_date
@@ -120,7 +124,6 @@ block content
                         button.description__button(type="button") 🔥<!-- 버튼 클릭 시 input 창에 [오늘의 한마디] 추가됨. 입력 시 이 문구가 있으면 오늘의 한마디로 넘어감 -->
                         input.add-form__input(type="text" placeholder="할 일")
                         button.add-form__button 추가
-                
                 li.day__item
                     .title 
                         .title_date
@@ -140,7 +143,6 @@ block content
                         button.description__button(type="button") 🔥<!-- 버튼 클릭 시 input 창에 [오늘의 한마디] 추가됨. 입력 시 이 문구가 있으면 오늘의 한마디로 넘어감 -->
                         input.add-form__input(type="text" placeholder="할 일")
                         button.add-form__button 추가
-                
                 li.day__item
                     .title 
                         .title_date
@@ -160,7 +162,6 @@ block content
                         button.description__button(type="button") 🔥<!-- 버튼 클릭 시 input 창에 [오늘의 한마디] 추가됨. 입력 시 이 문구가 있으면 오늘의 한마디로 넘어감 -->
                         input.add-form__input(type="text" placeholder="할 일")
                         button.add-form__button 추가
-               
                 li.day__item
                     .title 
                         .title_date
@@ -180,7 +181,6 @@ block content
                         button.description__button(type="button") 🔥<!-- 버튼 클릭 시 input 창에 [오늘의 한마디] 추가됨. 입력 시 이 문구가 있으면 오늘의 한마디로 넘어감 -->
                         input.add-form__input(type="text" placeholder="할 일")
                         button.add-form__button 추가
-                
                 li.day__item
                     .title 
                         .title_date
@@ -200,7 +200,6 @@ block content
                         button.description__button(type="button") 🔥<!-- 버튼 클릭 시 input 창에 [오늘의 한마디] 추가됨. 입력 시 이 문구가 있으면 오늘의 한마디로 넘어감 -->
                         input.add-form__input(type="text" placeholder="할 일")
                         button.add-form__button 추가
-               
                 li.day__item
                     .title 
                         .title_date
