input 자동완성 시 배경색 설정
첫 페이지 뿐만 아니라 다른 페이지에서도 색상 설정이 필요하다고 생각해서
home.scss에서 header.scss로 이동

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -15,6 +15,15 @@
 	::selection {
 		background-color: $text-drag;
 	}
+
+	input {
+		&:-webkit-autofill,
+		&:-webkit-autofill:hover,
+		&:-webkit-autofill:focus,
+		&:-webkit-autofill:active {
+			-webkit-box-shadow: 0 0 0 30px $hover inset !important;
+		}
+	}
 }
 
 body {
@@ -190,13 +199,6 @@ header {
 					background-color: $header-button-hover;
 				}
 			}
-
-			/*
-			a:hover,
-			button:hover {
-				background-color: $header-button-hover;
-			}
-			*/
 		}
 	}
 }
