--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -23,87 +23,12 @@ block content
                                         img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/pencil_270f.png", alt="수정")
                                     button.remove__button(type="button")
                                         img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/cross-mark_274c.png", alt="삭제")
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 1
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 1
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 1
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 1
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 1
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 1
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 1
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 1
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 1
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 10
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 11
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 12
-                                .button-wrapper
-                                    button.update(type="button") ✏
-                                    button.delete(type="button") ❌
-                            li 
-                                button.check(type="button") ✅ <!--버튼 클릭 시 완료-->
-                                span 할 일 123
-                    //- p.display-button ▲
-                    form.add-form <!--지난 날짜는 보이지 않도록-->
+                    form.add-form(action=`plans${routes.upload}`, method="post") <!--지난 날짜는 보이지 않도록-->
                         button.description__button(type="button")
                             img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
                         //  버튼 클릭 시 input 창에 [오늘의 한마디] 추가됨. 입력 시 이 문구가 있으면 오늘의 한마디로 넘어감
-                        input.add-form__input(type="text" placeholder="할 일")
+                        input.add-form__input(type="text", name="title", placeholder="할 일")
+                        input(type="hidden", name="category", value="공부")
                         button.add-form__button 추가
                 li.day__item
                     .title 
