description 관련 설정 추가중
- 날짜 아래에 그 날의 다짐이나 약속, 설명 등을 작성할 수 있도록 DB에
  description 여부를 체크할 수 있도록 추가
- 화면에는 description이 true일 때 보여질 수 있도록 추가했는데, 잘 동작
  않는다. 원하는 요일에 description이 true인 아이들을 보여지도록
  설정하려고 했는데 잘 안돼서 일단 저장

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -6,124 +6,33 @@ block content
         a.prev__btn < 
         .day
             ol.day__list#slider
-                li.day__item
-                    .title 
-                        .title_date
-                            span.title_date 13일 
-                            span.title_day 일요일
-                        .title_description
-                            p.description 블라블라어쩌고블라블라어쩌고블라블라어쩌고블라블라어쩌고블라블라어쩌고블라블라어쩌고블라블라어쩌고블라블라어쩌고블라블라어쩌고
-                    .todolist-box
-                        ul.todolist
-                            each item in user.plans
-                                +planBlock({
-                                    title:item.title
-                                })
-                        form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
-                            button.description__button(type="button")
-                                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
-                            input.add-form__input(type="text", name="title", placeholder="할 일")
-                            input(type="hidden", name="category", value="공부")
-                            button.add-form__button 추가
-                
-                li.day__item
-                    .title 
-                        .title_date
-                            span.title_date 14일 
-                            span.title_day 월요일
-                        .title_description
-                            p.description -
-                    .todolist-box
-                        ul.todolist
-                            each item in user.plans
-                                +planBlock({
-                                    title:item.title
-                                })
-                        form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
-                            button.description__button(type="button")
-                                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
-                            input.add-form__input(type="text", name="title", placeholder="할 일")
-                            input(type="hidden", name="category", value="공부")
-                            input(type="hidden", name="creator", value=user.id)
-                            button.add-form__button 추가
-                li.day__item
-                    .title 
-                        .title_date
-                            span.title_date 15일 
-                            span.title_day 화요일
-                        .title_description
-                            p.description -
-                    .todolist-box
-                        ul.todolist
-                            each item in user.plans
-                                +planBlock({
-                                    title:item.title
-                                })
-                        form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
-                            button.description__button(type="button")
-                                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
-                            input.add-form__input(type="text", name="title", placeholder="할 일")
-                            input(type="hidden", name="category", value="공부")
-                            input(type="hidden", name="creator", value=user.id)
-                            button.add-form__button 추가
-                li.day__item
-                    .title 
-                        .title_date
-                            span.title_date 16일 
-                            span.title_day 수요일
-                        .title_description
-                            p.description -
-                    .todolist-box
-                        ul.todolist
-                            each item in user.plans
-                                +planBlock({
-                                    title:item.title
-                                })
-                        form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
-                            button.description__button(type="button")
-                                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
-                            input.add-form__input(type="text", name="title", placeholder="할 일")
-                            input(type="hidden", name="category", value="공부")
-                            input(type="hidden", name="creator", value=user.id)
-                            button.add-form__button 추가
-                li.day__item
-                    .title 
-                        .title_date
-                            span.title_date 18일 
-                            span.title_day 금요일
-                        .title_description
-                            p.description -
-                    .todolist-box
-                        ul.todolist
-                            each item in user.plans
-                                +planBlock({
-                                    title:item.title
-                                })
-                        form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
-                            button.description__button(type="button")
-                                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
-                            input.add-form__input(type="text", name="title", placeholder="할 일")
-                            input(type="hidden", name="category", value="공부")
-                            input(type="hidden", name="creator", value=user.id)
-                            button.add-form__button 추가
-                li.day__item
-                    .title 
-                        .title_date
-                            span.title_date 19일 
-                            span.title_day 토요일
-                        .title_description
-                            p.description -
-                    .todolist-box
-                        ul.todolist
-                            each item in user.plans
-                                +planBlock({
-                                    title:item.title
-                                })
-                        form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
-                            button.description__button(type="button")
-                                img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
-                            input.add-form__input(type="text", name="title", placeholder="할 일")
-                            input(type="hidden", name="category", value="공부")
-                            input(type="hidden", name="creator", value=user.id)
-                            button.add-form__button 추가
+                - const dates = ["일", "월", "화", "수", "목", "금", "토"]
+                each date in dates
+                    li.day__item
+                        .title 
+                            .title_date
+                                span.title_date 13일 
+                                span.title_day=date
+                                |요일
+                            .title_description
+                                if user.plans.description==true
+                                    p.description=user.plans.title
+                                else
+                                    p.description 오늘은 무엇을 할까?
+                        .todolist-box
+                            ul.todolist
+                                each item in user.plans
+                                    if date==item.date && item.description==false
+                                        +planBlock({
+                                            title:item.title,
+                                            date:item.date
+                                        })
+                            form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
+                                button.description__button(type="button")
+                                    img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
+                                input.add-form__input(type="text", name="title", placeholder="할 일")
+                                input(type="hidden", name="category", value="공부")
+                                input(type="hidden", name="date", value=date)
+                                input(type="hidden", name="description", value="true")
+                                button.add-form__button 추가
         a.next__btn > 
