header 아이디 출력 기능 추가
- 현재 로그인된 아이디 출력하도록 설정
- 로그아웃 시 게스트 출력하도록 설정

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -135,12 +135,8 @@ header {
 					border-bottom: 1px solid #e1e4e8;
 					font-weight: 500;
 
-					& strong {
+					.id {
 						font-weight: 700;
-
-						&:hover {
-							opacity: 0.5;
-						}
 					}
 				}
 
