변수명 BEM 방법론대로 수정
.title_date가 두번 쓰이는 바람에 javascript로 제어가 안돼서 수정

--- a/src/assets/scss/plans.scss
+++ b/src/assets/scss/plans.scss
@@ -35,8 +35,7 @@ section {
 					background: $fill;
 					height: 102px;
 
-					&_date,
-					&_day {
+					&__date {
 						font-size: 25px;
 						font-weight: 600;
 						text-transform: uppercase;
@@ -45,7 +44,7 @@ section {
 						color: $title;
 					}
 
-					&_description {
+					&__description {
 						display: table;
 
 						.description {
