--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -6,15 +6,17 @@ block content
         a.prev__btn < 
         .day
             ol.day__list#slider
-                - const dates = ["일", "월", "화", "수", "목", "금", "토"]
-                each date in dates
+                - const order = [0, 1, 2, 3, 4, 5, 6]
+                - const days = ["일", "월", "화", "수", "목", "금", "토"]
+                each i in order
                     li.day__item
                         .title 
-                            .title_date
-                                span.title_date 13일 
-                                span.title_day=date
+                            .title__date
+                                span.date thisWeek[i]
+                                |일 
+                                span.day=days[i]
                                 |요일
-                            .title_description
+                            .title__description
                                 if user.plans.description==true
                                     p.description=user.plans.title
                                 else
@@ -22,17 +24,18 @@ block content
                         .todolist-box
                             ul.todolist
                                 each item in user.plans
-                                    if date==item.date && item.description==false
+                                    if day==item.day && item.description==false
                                         +planBlock({
                                             title:item.title,
-                                            date:item.date
+                                            day:item.day
                                         })
                             form.add-form(action=`plans${routes.upload}`, method="post", autocomplete="off") <!--지난 날짜는 보이지 않도록-->
                                 button.description__button(type="button")
                                     img(src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/72/microsoft/209/fire_1f525.png", alt="명언")
                                 input.add-form__input(type="text", name="title", placeholder="할 일")
                                 input(type="hidden", name="category", value="공부")
+                                input(type="hidden", name="day", value=day)
                                 input(type="hidden", name="date", value=date)
-                                input(type="hidden", name="description", value="true")
+                                //- input(type="hidden", name="description", value="true")
                                 button.add-form__button 추가
         a.next__btn > 
