plans 페이지 가로 스크롤 기능 제거
- 슬라이드 기능으로 인해 스크롤 기능이 필요없다고 생각하여 제거
- 대신, 페이지 띄우면 오늘 날짜의 form을 보여주면 좋을 것 같음.
- 그게 어려우면 아래에 바로가기 식으로 요일을 띄워서 해당 요일을 누르면
  그 위치로 가도록

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -2,7 +2,7 @@ extends layouts/main.pug
 include mixins/planBlock.pug
 
 block content
-    section(onmousewheel="horizontalScroll()")
+    section
         a.prev__btn < 
         .day
             ol.day__list#slider
